fixed header alignment issues

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,4 @@
+/*noinspection CssUnknownTarget*/
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Ubuntu+Mono');
 
 body {
@@ -15,7 +16,7 @@ body {
 }
 
 #listOfListsBody div{
-    margin: 0px 20px;
+    margin: 0 20px;
 }
 
 #listOfListsBody .containerTab {
@@ -57,6 +58,7 @@ header {
     grid-template-columns: 150px auto;
     background-color: #678E8D;
     justify-content: center;
+    align-items: center;
 }
 
 header nav {
@@ -122,7 +124,7 @@ h1,
 h2,
 h4,
 .column {
-    font-family: "Open Sans";
+    font-family: "Open Sans", serif;
 }
 
 #name {
